<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="20dp"
        tools:visibility="visible"/>

    <ImageView
        android:id="@+id/image_preview"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="40dp"
        android:contentDescription="@string/image_preview"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_image" />

    <Button
        android:id="@+id/button_camera"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="20dp"
        android:text="@string/camera"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_preview" />

    <Button
        android:id="@+id/button_gallery"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="60dp"
        android:text="@string/gallery"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.468"
        app:layout_constraintStart_toEndOf="@+id/button_camera"
        app:layout_constraintTop_toTopOf="@+id/button_camera" />

    <Button
        android:id="@+id/button_upload"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/upload"
        app:layout_constraintTop_toBottomOf="@id/input_desc"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/input_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/EditTextGeneral"
        android:background="@drawable/border_background"
        android:hint="@string/hint_description_edit_text"
        android:inputType="textMultiLine"
        android:maxLines="3"
        android:minLines="5"
        android:scrollbars="vertical"
        android:layout_marginTop="40dp"
        android:layout_marginHorizontal="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_camera" />

</androidx.constraintlayout.widget.ConstraintLayout>